@@ -1,7 +1,7 @@
 {
   "name": "patternlab-node",
   "description": "Pattern Lab is a collection of tools to help you create atomic design systems. This is the node command line interface (CLI).",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "devDependencies": {
     "browser-sync": "^2.8.2",
     "del": "^1.2.1",
