@@ -1,5 +1,8 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v0.14.0
+- ADD: Support for style modifiers
+
 PL-node-v0.13.1
 - FIX: Allow verbose partials for list items
 - THX: Thanks @e2tha-e
